# OOP-Stone

./: 01_output.txt  Attack.cpp  Attack.hpp  CMakeLists.txt  Card.cpp  Card.hpp  Cast.cpp  Cast.hpp  Command.cpp  Command.hpp  CreatureCard.cpp  CreatureCard.hpp  Finish.cpp  Finish.hpp  Game.cpp  Game.hpp  Help.cpp  Help.hpp  JsonParser.cpp  JsonParser.hpp  Player.cpp  Player.hpp  Quit.cpp  Quit.hpp  Sacrifice.cpp  Sacrifice.hpp  SetCard.cpp  SetCard.hpp  SpellCard.cpp  SpellCard.hpp  State.cpp  State.hpp  customtest.toml  new_tutor_test.toml  result.html  schema.json  test.toml
config/: config02.json  config03-smol.json  config04-supersmol-invalid.json  config05-onlyspells.json  config09_bonus_valid.json  config10_dupl_valid.json
custom_config/invalid_config/: e_config_additional_damage.json  e_config_additional_drain.json  e_config_additional_life.json  e_config_additional_mana.json  e_config_additional_name.json  e_config_additional_shield.json  e_config_additional_speedy.json  e_config_damage_float.json  e_config_damage_letter.json  e_config_damage_too_high.json  e_config_damage_too_low.json  e_config_double_vaue__life.json  e_config_double_vaue_damage.json  e_config_double_vaue_drain.json  e_config_double_vaue_mana.json  e_config_double_vaue_shield.json  e_config_drain_wrong.json  e_config_duplicate_names.json  e_config_invalid_spell.json  e_config_junk_data.json  e_config_junk_data_end_of_file.json  e_config_life_float.json  e_config_life_letter.json  e_config_life_too_high.json  e_config_life_too_low.json  e_config_mana_float.json  e_config_mana_letter.json  e_config_mana_too_high.json  e_config_mana_too_low.json  e_config_missing_damage.json  e_config_missing_drain.json  e_config_missing_life.json  e_config_missing_mana.json  e_config_missing_name.json  e_config_missing_shield.json  e_config_missing_speedy.json  e_config_missing_value_damage.json  e_config_missing_value_drain.json  e_config_missing_value_life.json  (+9 more)
(+54 files in other folders)
